k8s/signaling-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signaling
spec:
  selector:
    matchLabels:
      run: signaling
  replicas: 1
  template:
    metadata:
      labels:
        run: signaling
    spec:
      containers:
        - name: signaling
          image: gcr.io/webrtc-202106/signaling:v1
          ports:
          - containerPort: 80
          imagePullPolicy: Always
