k8s/signaling-service.yml
apiVersion: v1
kind: Service
metadata:
  name: signaling
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"websocket-backendconfig"}}'
spec:
  selector:
    run: signaling
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: NodePort
