k8s/turn-service.yml
apiVersion: v1
kind: Service
metadata:
  name: turn
spec:
  selector:
    app: turn
  ports:
    - port: 3478
      targetPort: 3478
      protocol: UDP
      name: turn
  type: LoadBalancer
  loadBalancerIP: 34.85.33.64
