k8s/webrtc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webrtc
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "public-ip"
    networking.gke.io/managed-certificates: webrtc-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: signaling
      port:
        number: 80
